--- a/install_jupyterhub.yml
+++ b/install_jupyterhub.yml
@@ -1,6 +1,6 @@
 ---
   - name: Playbook Install JupyterHub
-    hosts: jupyterhub
+    hosts: jhub_primary_master 
     vars_files:
       - vars.yml
 
