--- a/jhub_apply_config_change.yml
+++ b/jhub_apply_config_change.yml
@@ -1,6 +1,6 @@
 ---
   - name: Playbook Install JupyterHub
-    hosts: jupyterhub
+    hosts: jhub_primary_master 
     vars_files:
       - vars.yml
 
