Create base docker image, with RStudio server proxy

--- a/jhub_config.yml
+++ b/jhub_config.yml
@@ -22,6 +22,9 @@ singleuser:
   defaultUrl: "/lab"
   extraEnv:
     JUPYTERHUB_SINGLEUSER_APP: "jupyter_server.serverapp.ServerApp"
+  image:
+    name: aresti/climbbase
+    tag: "0.1"
 
 hub:
   config:
