--- a/jhub_apply_config_change.yml
+++ b/jhub_apply_config_change.yml
@@ -1,5 +1,5 @@
 ---
-  - name: Playbook Install JupyterHub
+  - name: Playbook Update JupyterHub Config
     hosts: jhub_primary_master 
     vars_files:
       - vars.yml
