Enable microk8s gpu addon for relevant nodes

--- a/install_microk8s.yml
+++ b/install_microk8s.yml
@@ -36,7 +36,7 @@
 
       - name: microk8s enable dns
         command: /snap/bin/microk8s enable dns
-        when: ansible_hostname in groups['jhub_primary_master'] and microk8s_status.stdout.split('addons:')[1].split(':')[1].find('dns') == -1
+        when: "'jhub_primary_master' in group_names and microk8s_status.stdout.split('addons:')[1].split(':')[1].find('dns') == -1"
 
       - name: microk8s enable helm3
         command: /snap/bin/microk8s enable helm3
@@ -44,7 +44,11 @@
 
       - name: microk8s enable metallb
         command: /snap/bin/microk8s enable metallb:10.0.0.100-10.0.0.200,147.188.173.249-147.188.173.249
-        when: ansible_hostname in groups['jhub_primary_master'] and microk8s_status.stdout.split('addons:')[1].split(':')[1].find('metallb') == -1
+        when: "'jhub_primary_master' in group_names and microk8s_status.stdout.split('addons:')[1].split(':')[1].find('metallb') == -1"
+
+      - name: microk8s enable gpu
+        command: /snap/bin/microk8s enable gpu 
+        when: "'jhub_gpu_nodes' in group_names and microk8s_status.stdout.split('addons:')[1].split(':')[1].find('gpu') == -1"
 
       - name: enable iscsid.service
         become: yes 
