--- a/install_microk8s.yml
+++ b/install_microk8s.yml
@@ -10,7 +10,7 @@
         snap:
           name: microk8s
           classic: yes
-          channel: 1.21
+          channel: 1.22
     
       - name: Add user to microk8s group
         become: yes 
@@ -43,7 +43,7 @@
         when: microk8s_status.stdout.split('addons:')[1].split(':')[1].find('helm3') == -1
 
       - name: microk8s enable metallb
-        command: /snap/bin/microk8s enable metallb:10.0.0.100-10.0.0.200,147.188.173.249-147.188.173.249
+        command: /snap/bin/microk8s enable metallb:10.0.0.100-10.0.0.200,{{ load_balancer_ip }}-{{ load_balancer_ip }}
         when: "'jhub_primary_master' in group_names and microk8s_status.stdout.split('addons:')[1].split(':')[1].find('metallb') == -1"
 
       - name: microk8s enable gpu
